fix: heading font on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -32,7 +32,7 @@ h1 {
     font-family: 'Coda', cursive;
     font-weight: 300;
     color: #311432;
-    font-size: 3em;
+    font-size: 2em;
     margin: 10px 0;
     padding: 0;
 }
@@ -278,5 +278,9 @@ h1 {
 
     .score-panel {
         width: 600px;
+    }
+
+    h1 {
+        font-size: 3rem;
     }
 }
